--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../images/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div id="body-pic1" class="parallax"><img src="../images/background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -102,7 +102,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="/images/background3.jpg" alt="Unsplashed background img 3"></div>
+    <div id="body-pic2" class="parallax"><img src="/images/background3.jpg" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
