updated logo with image

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <img id="logo-container" href="#" class="brand-logo" src="../images/CSU-w-hockey-logo.png" alt="CSU Women's Hockey"></img>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
