updated text and style

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,7 @@
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <img id="logo-container" href="#" class="brand-logo" src="../images/CSU-w-hockey-logo.png" alt="CSU Women's Hockey"></img>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      {{!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> --}}
     </div>
   </nav>
 
@@ -18,7 +11,8 @@
         <br><br>
         <h1 class="header center main-title">Checking in Women's Hockey</h1>
         <div class="row center">
-          <h5 class="header col s12 main-subtitle">Why not?</h5>
+            <h5 class="header col s12 main-subtitle">Why there needs to be a change.</h5>
+            <h5 class="header col s12 usahockey-subtitle">USA Hockey... Get with It!</h5>
         </div>
         <!-- <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -38,28 +32,28 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h2 class="center brown-text"><i class="material-icons">accessibility</i></h2>
+            <h5 class="center">Better Sense of Body Agency</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Body agency is having a sense of control over how one’s body moves, as well as the actions they want his or her body to perform.Without the control of one’s own body, injuries can result. If a player does not understand how to take a hit (check), they have no sense of body agency in this situation. Due to men’s ice hockey allowing body checking, men are able to learn how to control their own body to an extent not offered to females. If body checking were allowed in women’s ice hockey, rates of serious injury could potentially decline due to a female player being able to anticipate and react to a hit in an appropriate manner.The findings that body checking reduces the risk of injury when taught correctly provides a base for implementing this practice into women’s ice hockey to teach body agency.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h2 class="center brown-text"><i class="material-icons">face</i></h2>
+            <h5 class="center">Potential for Less Concussions</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">Research conducted by Julie Agel and Edward J. Harvey reports that increased body agency correlates to lower concussion rates. Within this study, Agel and Edward found that while men suffered more injuries than females, they often were minor injuries to the extremities, but in women’s ice hockey, rates of concussions were found to be roughly at the same rates (Agel and Edward). The researchers related the concussions found in women’s ice hockey were related to women not knowing what to do when they had body contact with another player (Agel and Edward). Due to concussion rates being the same within men’s hockey, where checking is allowed, and women’s hockey where checking is not allowed, the amount of concussions faced by men could not be correlated to checking alone.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <h2 class="center brown-text"><i class="material-icons">wc</i></h2>
+            <h5 class="center">Convincing Gender-Neutral Evidence</h5>
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">Concussion researcher John Rosene speculates that due to the rising popularity of women’s ice hockey, females are getting more involved in the sport from a younger, often when the sport is co-ed. As female players get older, whether they choose to continue to play alongside males, or transfer over to an all-female team relates to sense of body agency that they learn in their developmental years (Rosene). Playing boy’s hockey from a young age implements body checking which allows for an increased awareness of the game. Women who did not play/or continue to play with boys are at a higher risk of developing a concussion as a result of a lack of body agency (Rosene).</p>
           </div>
         </div>
       </div>
@@ -72,8 +66,8 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
+            <h5 class="header col s12 light section2">Why Female Athletes Experience Concussions at Higher Rates than Men</h5>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tIfXsxtnGr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
       </div>
     </div>
     <div id="body-pic1" class="parallax"><img src="../images/background2.jpg" alt="Unsplashed background img 2"></div>
@@ -85,8 +79,8 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          <h4>“Sometimes you're more likely to get a concussion in the women's game because we don't grow up hitting.” -Caitlin Cahow </h4>
+          <p class="left-align light">Women’s ice hockey is becoming increasingly dangerous due to the lack of checking within the female side of the sport. While boys grow up learning how to check, women are not granted the same opportunity (unless they choose to participate in boy’s hockey from a young age) to learn the body positioning needed to take the force of a hit (Whiteside). Caitlin Cahow, a women’s Olympic ice hockey player, suffered from a severe concussion and ultimately ended her career in hockey because of her brain injury. Cahow was not able to participate in every day activities without experiencing an immense amount of pain (Whiteside). She was unable to stand outside for periods of time over five minutes because the brightness of the sun was too much to handle. </p>
         </div>
       </div>
 
@@ -98,7 +92,8 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+            <h3 class="header col s12 light section3-title">A Call To Action</h3>
+            <h5 class="header col s12 light section3-text">USA Hockey needs to make changes to the checking rule within women's ice hockey. While ice hockey is a growing sport for women to play in countless countries, Charlene Weaving and Samuel Roberts claim that women who play ice hockey are not awarded the same opportunities as men to excel within the sport (470). Sports, in general, are implemented into our society in a patriarchal manner. Women are seen as less athletic than men, therefore checking should not be allowed within women's ice hockey. However, the logic behind this claim seems to be absent within the sport of ice hockey. Checking is not allowed within the women's side of the sport even though females are allowed to play alongside men where checking is allowed and yet females in this situation experience concussions at a lower rate than females in women's hockey. Therefore, it can be surmised, that women are not inherently more susceptible to concussions than their male counterparts, but, rather lack of checking in women's hockey results in lower body agency which leads to an increased risk of concussions in this population.</h5>
         </div>
       </div>
     </div>
@@ -108,29 +103,27 @@
   <footer class="page-footer teal">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col s12">
           <h5 class="bio-title">Author Bio</h5>
-          <p class="bio-text">Teagan Ries is a ...</p>
-
-
+          <p class="bio-text">Teagan Ries is a female ice hockey player who has played both men's and women's ice hockey at high levels where checking was implemented within the men's game, but not the women's.</p>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+      </div>
+    </div>
+    </hr>
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+            <h5 class="references">Works Cited</h5>
+            <p class="reference-text">Agel, Julie, and Edward J. Harvey. “A 7-Year Review of Men’s and Women’s Ice Hockey Injuries in the NCAA.” <i>Canadian Journal of Surgery</i>, vol. 53, no. 5, Oct. 2010, pp. 319–323.
+</p>
+            <p class="reference-text">Borzilleri, Meri-Jo. “Why USA vs. Canada Women's Hockey Is the Best Rivalry You've Never Heard Of.” <i>Bleacher Report,</i> Bleacher Report, 16 Sept. 2017, https://bleacherreport.com/articles/1955641-why-usa-vs-canada-womens-hockey-is-the-best-rivalry-youve-never-heard-of.</p>
+            <p class="reference-text">Rosene, John M., et al. “Comparison of Concussion Rates Between NCAA Division I and Division III Men’s and Women’s Ice Hockey Players.” <i>American Journal of Sports Medicine,</i> vol. 45, no. 11, Sept. 2017, pp. 2622–2629.</p>
+            <p class="reference-text">“Same Game but Why Are Women Kept in Hockey's Ice Age?” <i>Sports Ethics,</i> 23 Nov. 2015, https://ethicsofsports.wordpress.com/2015/11/23/same-game-but-why-are-women-kept-in-hockeys-ice-age/.</p>
+            <p class="reference-text">Terlep, Sharon. “(Technically) No Checking in Women's Hockey.” <i>The Wall Street Journal,</i> Dow Jones & Company, 10 Feb. 2014, https://www.wsj.com/articles/no-headline-available-1392050064.</p>
+            <p class="reference-text">Weaving, Charlene, and Samuel Roberts. “Checking In: An Analysis of the (Lack of) Body Checking in Women’s Ice Hockey.” <i>Research Quarterly for Exercise &amp; Sport,</i> vol. 83, no. 3, Sept. 2012, pp. 470–478</p>
+            <p class="reference-text">Whiteside, Kelly. “One Year Later, Caitlin Cahow's Life Back to Normal Following Concussion Scare.” <i>USA Today,</i> Gannett Satellite Information Network, 27 Aug. 2013, https://www.usatoday.com/story/sports/olympics/2013/08/26/concussion-hockey-player-caitlin-cahow/2704169/
+</p>
+            <p class="reference-text">“Why Women’s Ice Hockey Has a Higher Concussion Rate than Football.” <i>YouTube,</i> Vox, https://www.youtube.com/watch?v=tIfXsxtnGr4.</p>
         </div>
       </div>
     </div>
