--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,11 +43,28 @@ nav .brand-logo,
 }
 
 .main-title,
-.main-subtitle {
+.main-subtitle,
+.section2,
+.section3-title {
   color: #C8C372;
   font-weight: bold;
   text-align: center;
-  text-shadow: 4px 4px 0px #1E4D2B;
+  /* text-shadow: 4px 4px 0px #1E4D2B; */
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.usahockey-subtitle {
+  color: #1E4D2B;
+  font-weight: bolder;
+  text-shadow: -1px 0 #C8C372, 0 1px #C8C372, 1px 0 #C8C372, 0 -1px #C8C372;
+
+}
+
+.section3-text {
+  color: #C8C372;
+  font-weight: bolder;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 
