fixed typos and spacing

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,7 @@
             <h2 class="center brown-text"><i class="material-icons">accessibility</i></h2>
             <h5 class="center">Better Sense of Body Agency</h5>
 
-            <p class="light">Body agency is having a sense of control over how one’s body moves, as well as the actions they want his or her body to perform.Without the control of one’s own body, injuries can result. If a player does not understand how to take a hit (check), they have no sense of body agency in this situation. Due to men’s ice hockey allowing body checking, men are able to learn how to control their own body to an extent not offered to females. If body checking were allowed in women’s ice hockey, rates of serious injury could potentially decline due to a female player being able to anticipate and react to a hit in an appropriate manner.The findings that body checking reduces the risk of injury when taught correctly provides a base for implementing this practice into women’s ice hockey to teach body agency.</p>
+            <p class="light">Body agency is having a sense of control over how one’s body moves, as well as the actions they want his or her body to perform. Without the control of one’s own body, injuries can result. If a player does not understand how to take a hit (check), they have no sense of body agency in this situation. Due to men’s ice hockey allowing body checking, men are able to learn how to control their own body to an extent not offered to females. If body checking were allowed in women’s ice hockey, rates of serious injury could potentially decline due to a female player being able to anticipate and react to a hit in an appropriate manner. The findings that body checking reduces the risk of injury when taught correctly provides a base for implementing this practice into women’s ice hockey to teach body agency.</p>
           </div>
         </div>
 
@@ -44,7 +44,7 @@
             <h2 class="center brown-text"><i class="material-icons">face</i></h2>
             <h5 class="center">Potential for Less Concussions</h5>
 
-            <p class="light">Research conducted by Julie Agel and Edward J. Harvey reports that increased body agency correlates to lower concussion rates. Within this study, Agel and Edward found that while men suffered more injuries than females, they often were minor injuries to the extremities, but in women’s ice hockey, rates of concussions were found to be roughly at the same rates (Agel and Edward). The researchers related the concussions found in women’s ice hockey were related to women not knowing what to do when they had body contact with another player (Agel and Edward). Due to concussion rates being the same within men’s hockey, where checking is allowed, and women’s hockey where checking is not allowed, the amount of concussions faced by men could not be correlated to checking alone.</p>
+            <p class="light">Research conducted by Julie Agel and Edward J. Harvey reports that increased body agency correlates to lower concussion rates. Within this study, Agel and Edward found that while men suffered more injuries than females, they often were minor injuries to the extremities, but in women’s ice hockey, rates of concussions were found to be roughly at the same rates. The researchers related the concussions found in women’s ice hockey were related to women not knowing what to do when they had body contact with another player (Agel and Edward). Due to concussion rates being the same within men’s hockey, where checking is allowed, and women’s hockey where checking is not allowed, the amount of concussions faced by men could not be correlated to checking alone.</p>
           </div>
         </div>
 
@@ -53,7 +53,7 @@
             <h2 class="center brown-text"><i class="material-icons">wc</i></h2>
             <h5 class="center">Convincing Gender-Neutral Evidence</h5>
 
-            <p class="light">Concussion researcher John Rosene speculates that due to the rising popularity of women’s ice hockey, females are getting more involved in the sport from a younger, often when the sport is co-ed. As female players get older, whether they choose to continue to play alongside males, or transfer over to an all-female team relates to sense of body agency that they learn in their developmental years (Rosene). Playing boy’s hockey from a young age implements body checking which allows for an increased awareness of the game. Women who did not play/or continue to play with boys are at a higher risk of developing a concussion as a result of a lack of body agency (Rosene).</p>
+            <p class="light">Concussion researcher John Rosene speculates that due to the rising popularity of women’s ice hockey, females are getting more involved in the sport from a younger age, often when the sport is co-ed. As female players get older, whether they choose to continue to play alongside males, or transfer over to an all-female team relates to sense of body agency that they learn in their developmental years (Rosene). Playing boy’s hockey from a young age implements body checking which allows for an increased awareness of the game. Women who did not play/or continue to play with boys are at a higher risk of developing a concussion as a result of a lack of body agency (Rosene).</p>
           </div>
         </div>
       </div>
