--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,11 +60,29 @@ nav .brand-logo,
 
 }
 
+h5 {
+  font-size: 250%;
+}
+
+.body-text {
+  font-size: 150%;
+}
+
 .section3-text {
+  font-size: 175%;
   color: #C8C372;
   font-weight: bolder;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
+}
+
+#action-call,
+#index-banner {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.material-icons {
+  color: #C8C372;
 }
 
 
