--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <img id="logo-container" href="#" class="brand-logo" src="../images/CSU-w-hockey-logo.png" alt="CSU Women's Hockey"></img>
-      {{!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> --}}
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"></i></a>
     </div>
   </nav>
 
@@ -12,7 +12,7 @@
         <h1 class="header center main-title">Checking in Women's Hockey</h1>
         <div class="row center">
             <h5 class="header col s12 main-subtitle">Why there needs to be a change.</h5>
-            <h5 class="header col s12 usahockey-subtitle">USA Hockey... Get with It!</h5>
+            <h5 class="header col s12 usahockey-subtitle">USA Hockey... Get With It!</h5>
         </div>
         <!-- <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -35,7 +35,7 @@
             <h2 class="center brown-text"><i class="material-icons">accessibility</i></h2>
             <h5 class="center">Better Sense of Body Agency</h5>
 
-            <p class="light">Body agency is having a sense of control over how one’s body moves, as well as the actions they want his or her body to perform. Without the control of one’s own body, injuries can result. If a player does not understand how to take a hit (check), they have no sense of body agency in this situation. Due to men’s ice hockey allowing body checking, men are able to learn how to control their own body to an extent not offered to females. If body checking were allowed in women’s ice hockey, rates of serious injury could potentially decline due to a female player being able to anticipate and react to a hit in an appropriate manner. The findings that body checking reduces the risk of injury when taught correctly provides a base for implementing this practice into women’s ice hockey to teach body agency.</p>
+            <p class="light body-text">Body agency is having a sense of control over how one’s body moves, as well as the actions they want his or her body to perform. Without the control of one’s own body, injuries can result. If a player does not understand how to take a hit (check), they have no sense of body agency in this situation. Due to men’s ice hockey allowing body checking, men are able to learn how to control their own body to an extent not offered to females. If body checking were allowed in women’s ice hockey, rates of serious injury could potentially decline due to a female player being able to anticipate and react to a hit in an appropriate manner. The findings that body checking reduces the risk of injury when taught correctly provides a base for implementing this practice into women’s ice hockey to teach body agency.</p>
           </div>
         </div>
 
@@ -44,16 +44,16 @@
             <h2 class="center brown-text"><i class="material-icons">face</i></h2>
             <h5 class="center">Potential for Less Concussions</h5>
 
-            <p class="light">Research conducted by Julie Agel and Edward J. Harvey reports that increased body agency correlates to lower concussion rates. Within this study, Agel and Edward found that while men suffered more injuries than females, they often were minor injuries to the extremities, but in women’s ice hockey, rates of concussions were found to be roughly at the same rates. The researchers related the concussions found in women’s ice hockey were related to women not knowing what to do when they had body contact with another player (Agel and Edward). Due to concussion rates being the same within men’s hockey, where checking is allowed, and women’s hockey where checking is not allowed, the amount of concussions faced by men could not be correlated to checking alone.</p>
+            <p class="light body-text">Research conducted by Julie Agel and Edward J. Harvey reports that increased body agency correlates to lower concussion rates. Within this study, Agel and Edward found that while men suffered more injuries than females, they often were minor injuries to the extremities, but in women’s ice hockey, rates of concussions were found to be roughly at the same rates. The researchers related the concussions found in women’s ice hockey were related to women not knowing what to do when they had body contact with another player (Agel and Edward). Due to concussion rates being the same within men’s hockey, where checking is allowed, and women’s hockey where checking is not allowed, the amount of concussions faced by men could not be correlated to checking alone.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">wc</i></h2>
-            <h5 class="center">Convincing Gender-Neutral Evidence</h5>
+            <h5 class="center">Gender-Neutral Evidence</h5>
 
-            <p class="light">Concussion researcher John Rosene speculates that due to the rising popularity of women’s ice hockey, females are getting more involved in the sport from a younger age, often when the sport is co-ed. As female players get older, whether they choose to continue to play alongside males, or transfer over to an all-female team relates to sense of body agency that they learn in their developmental years (Rosene). Playing boy’s hockey from a young age implements body checking which allows for an increased awareness of the game. Women who did not play/or continue to play with boys are at a higher risk of developing a concussion as a result of a lack of body agency (Rosene).</p>
+            <p class="light body-text">Concussion researcher John Rosene speculates that due to the rising popularity of women’s ice hockey, females are getting more involved in the sport from a younger age, often when the sport is co-ed. As female players get older, whether they choose to continue to play alongside males, or transfer over to an all-female team relates to sense of body agency that they learn in their developmental years (Rosene). Playing boy’s hockey from a young age implements body checking which allows for an increased awareness of the game. Women who did not play/or continue to play with boys are at a higher risk of developing a concussion as a result of a lack of body agency (Rosene).</p>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" id="action-call">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -80,7 +80,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h4>“Sometimes you're more likely to get a concussion in the women's game because we don't grow up hitting.” -Caitlin Cahow </h4>
-          <p class="left-align light">Women’s ice hockey is becoming increasingly dangerous due to the lack of checking within the female side of the sport. While boys grow up learning how to check, women are not granted the same opportunity (unless they choose to participate in boy’s hockey from a young age) to learn the body positioning needed to take the force of a hit (Whiteside). Caitlin Cahow, a women’s Olympic ice hockey player, suffered from a severe concussion and ultimately ended her career in hockey because of her brain injury. Cahow was not able to participate in every day activities without experiencing an immense amount of pain (Whiteside). She was unable to stand outside for periods of time over five minutes because the brightness of the sun was too much to handle. </p>
+          <p class="left-align light body-text">Women’s ice hockey is becoming increasingly dangerous due to the lack of checking within the female side of the sport. While boys grow up learning how to check, women are not granted the same opportunity (unless they choose to participate in boy’s hockey from a young age) to learn the body positioning needed to take the force of a hit (Whiteside). Caitlin Cahow, a women’s Olympic ice hockey player, suffered from a severe concussion and ultimately ended her career in hockey because of her brain injury. Cahow was not able to participate in every day activities without experiencing an immense amount of pain (Whiteside). She was unable to stand outside for periods of time over five minutes because the brightness of the sun was too much to handle. </p>
         </div>
       </div>
 
@@ -88,7 +88,7 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" id="action-call">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
