font justification and media query layouts updated

--- a/public/stylesheets/materialize.css
+++ b/public/stylesheets/materialize.css
@@ -979,7 +979,7 @@
   color: #00b8d4 !important;
 }
 
-/* .teal {
+.teal {
   background-color: #009688 !important;
 }
 
@@ -1089,7 +1089,7 @@
 
 .teal-text.text-accent-4 {
   color: #00bfa5 !important;
-} */
+}
 
 .green {
   background-color: #4CAF50 !important;
