--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row center">
           <h5 class="header col s12 light section2">Why Female Athletes Experience Concussions at Higher Rates than Men</h5>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/tIfXsxtnGr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
+          <iframe id="video-player" width="560" height="315" src="https://www.youtube.com/embed/tIfXsxtnGr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>      
       </div>
     </div>
   </div>
