changed browser tab title and favicon

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>{{title}}</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.ico"/>
+    <title>Checking Womens Hockey</title>
 
   <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
